전체 UI/UX 개선: 강사 페이지 테마 수정, 학생 관리 로직 개선, 성적 관리 차트 추가, 관리자 페이지 UX 개선